fix: fix overflowing styles

--- a/app/src/main.css
+++ b/app/src/main.css
@@ -25,6 +25,8 @@ body {
   display: flex;
   flex-direction: column;
   height: 100dvh;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 main {
