--- a/app/src/styles/Galeria.module.css
+++ b/app/src/styles/Galeria.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 8rem 2rem 4rem 2rem;
+  padding: 5rem 1rem 4rem 1rem;
 }
 
 .content {
@@ -14,7 +14,6 @@
   width: 100%;
   max-width: 400px;
   border-radius: 15px;
-  margin-bottom: 2.5rem;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
 
